// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Offer (tile) with all data and long shop name 1`] = `
<a
  className="offer"
  href="url"
  rel="noopener"
  target="_blank"
>
  <div
    className="image"
  >
    <img
      alt=""
      className="image"
      src="https://avatars.mds.yandex.net/get-marketpic/1601096/market_5xENMkg0LRk8kuLWHZf45g/orig"
    />
  </div>
  <div
    className="content"
  >
    <h3
      className="name title"
    >
      Apple iPhone 11 | 4G смартфон A13 с бионическим чипом 6,1 дюймов жидкий сетчатый HD ЖК-дисплей Двойная камера
    </h3>
    <div
      className="price"
    >
      <div
        className="price priceTile"
      >
        <div
          className="priceWrapper"
        >
          <div
            className="current currentTile"
          >
            53 990 руб.
          </div>
        </div>
      </div>
    </div>
    <div
      className="delivery"
    >
      <div
        className="delivery"
      >
        <div
          className="icon deliveryIcon deliveryManIcon"
        />
        <span
          className="info"
        >
          Бесплатно
        </span>
      </div>
    </div>
    <div
      className="shop"
    >
      <div>
        РЕСПУБЛИКА - Книги. Музыка. Перспектива Книги. Музыка. Перспектива
         
        4
      </div>
    </div>
  </div>
  <div
    className="button"
  >
    <button
      className="button thin"
      type="button"
    >
      Пoдpoбнee
    </button>
  </div>
</a>
`;

exports[`Offer (tile) with all data and model found 1`] = `
<a
  className="offer"
  href="url1"
  rel="noopener"
  target="_blank"
>
  <div
    className="image"
  >
    <img
      alt=""
      className="image"
      src="https://avatars.mds.yandex.net/get-marketpic/937598/market_BxDAKi6-a1MK_urSB0HXFQ/orig"
    />
  </div>
  <div
    className="content"
  >
    <h3
      className="name title"
    >
      Apple iPhone Xr 128GB Yellow (Желтый)
    </h3>
    <div
      className="price"
    >
      <div
        className="price priceTile"
      >
        <div
          className="priceWrapper"
        >
          <div
            className="current currentTile"
          >
            43 990 руб.
          </div>
        </div>
      </div>
    </div>
    <div
      className="delivery"
    >
      <div
        className="delivery"
      >
        <div
          className="icon deliveryIcon deliveryManIcon"
        />
        <span
          className="info"
        >
          300 руб.
        </span>
      </div>
    </div>
    <div
      className="shop"
    >
      <div>
        СОТОХИТ.РФ
         
        5
      </div>
    </div>
  </div>
  <div
    className="button"
  >
    <button
      className="button thin"
      type="button"
    >
      Пoдpoбнeе
    </button>
  </div>
</a>
`;

exports[`Offer (tile) with all data and without model 1`] = `
<a
  className="offer"
  href="url1"
  rel="noopener"
  target="_blank"
>
  <div
    className="image"
  >
    <img
      alt=""
      className="image"
      src="https://avatars.mds.yandex.net/get-marketpic/1724044/market_gBFiYr8nDK5QqKximjELLA/orig"
    />
  </div>
  <div
    className="content"
  >
    <h3
      className="name title"
    >
      Тюль Камея "Моно" кухонный, 300*180 см, цвет: коралловый
    </h3>
    <div
      className="price"
    >
      <div
        className="price priceTile"
      >
        <div
          className="priceWrapper"
        >
          <div
            className="current currentTile"
          >
            1 190 руб.
          </div>
        </div>
      </div>
    </div>
    <div
      className="delivery"
    >
      <div
        className="delivery"
      >
        <div
          className="icon deliveryIcon deliveryManIcon"
        />
        <span
          className="info"
        >
          249 руб.
        </span>
      </div>
    </div>
    <div
      className="shop"
    >
      <div>
        OZON.ru
         
        4
      </div>
    </div>
  </div>
</a>
`;

exports[`Offer (tile) with model, old price and discount 1`] = `
<a
  className="offer"
  href="url"
  rel="noopener"
  target="_blank"
>
  <div
    className="image"
  >
    <img
      alt=""
      className="image"
      src="https://avatars.mds.yandex.net/get-marketpic/1601096/market_5xENMkg0LRk8kuLWHZf45g/orig"
    />
  </div>
  <div
    className="content"
  >
    <h3
      className="name title"
    >
      Смартфон Apple iPhone XR 3/128GB, красный
    </h3>
    <div
      className="price discountPrice"
    >
      <div
        className="discount"
      >
        – 
        50
        %
      </div>
      <div
        className="price priceTile"
      >
        <div
          className="priceWrapper"
        >
          <div
            className="current currentTile newCurrentPrice"
          >
            53 990 руб.
          </div>
          <div
            className="old oldTile"
          >
            107 980 руб.
          </div>
        </div>
      </div>
    </div>
    <div
      className="delivery"
    >
      <div
        className="delivery"
      >
        <div
          className="icon deliveryIcon deliveryManIcon"
        />
        <span
          className="info"
        >
          Бесплатно
        </span>
      </div>
    </div>
    <div
      className="shop"
    >
      <div>
        OZON.ru
         
        4
      </div>
    </div>
  </div>
  <div
    className="button"
  >
    <button
      className="button thin"
      type="button"
    >
      Пoдpoбнee
    </button>
  </div>
</a>
`;

exports[`Offer (tile) without image url 1`] = `
<a
  className="offer"
  href="url"
  rel="noopener"
  target="_blank"
>
  <div
    className="image"
  >
    <img
      alt=""
      className="image"
      src={Object {}}
    />
  </div>
  <div
    className="content"
  >
    <h3
      className="name title"
    >
      Смартфон Apple iPhone XR 3/128GB, красный
    </h3>
    <div
      className="price"
    >
      <div
        className="price priceTile"
      >
        <div
          className="priceWrapper"
        >
          <div
            className="current currentTile"
          >
            53 990 руб.
          </div>
        </div>
      </div>
    </div>
    <div
      className="delivery"
    >
      <div
        className="delivery"
      >
        <div
          className="icon deliveryIcon deliveryManIcon"
        />
        <span
          className="info"
        >
          Бесплатно
        </span>
      </div>
    </div>
    <div
      className="shop"
    >
      <div>
        OZON.ru
         
        4
      </div>
    </div>
  </div>
  <div
    className="button"
  >
    <button
      className="button thin"
      type="button"
    >
      Пoдpoбнee
    </button>
  </div>
</a>
`;
